--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -59,19 +59,50 @@ apply_local_conf() {
 XROAD_PARAMS="-XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
 -Djavax.xml.accessExternalDTD=\"\" -Djavax.xml.accessExternalStylesheet=\"\" $XROAD_PARAMS"
 
-# Detect package manager and check for xroad-center
-detect_deployment_type() {
-  local detected_application_type
-
+get_deployment_type() {
   # Check for central server specific directories/files
+  local detected_application_type
   if [ -f "/etc/xroad/services/centralserver-admin-service.conf" ]; then
-    detected_application_type="cs"
+    echo "cs"
   else
-    detected_application_type="ss"
+    echo "ss"
   fi
+}
 
-  echo "Detected X-Road deployment type: $detected_application_type"
-  export XROAD_QUARKUS_PROFILES="native,${detected_application_type}"
+set_quarkus_profiles() {
+  local deployment_type
+  deployment_type=$(get_deployment_type)
+
+  export XROAD_QUARKUS_PROFILES="native,${deployment_type}"
+}
+
+set_db_configuration_source_properties() {
+  local deployment_type
+  deployment_type=$(get_deployment_type)
+
+  if [ "$deployment_type" = "ss" ]; then
+    if [ -r /etc/xroad/db.properties ]; then
+      get_db_prop() { crudini --get "/etc/xroad/db.properties" '' "$1" 2>/dev/null || echo -n ""; }
+
+      local base_url
+      local db_schema
+      local jdbc_url
+      base_url=$(get_db_prop 'xroad.db.serverconf.hibernate.connection.url')
+      db_schema=$(get_db_prop 'xroad.db.serverconf.hibernate.hikari.dataSource.currentSchema')
+      if [[ -n "$db_schema" ]]; then
+          if [[ "$base_url" == *\?* ]]; then
+              jdbc_url="${base_url}&currentSchema=${db_schema}"
+          else
+              jdbc_url="${base_url}?currentSchema=${db_schema}"
+          fi
+      else
+          jdbc_url="$base_url"
+      fi
+      export DB_CONFIG_SOURCE_URL="$jdbc_url"
+      export DB_CONFIG_SOURCE_USERNAME=$(get_db_prop 'xroad.db.serverconf.hibernate.connection.username')
+      export DB_CONFIG_SOURCE_PASSWORD=$(get_db_prop 'xroad.db.serverconf.hibernate.connection.password')
+    fi
+  fi
 }
 
 if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
@@ -79,5 +110,5 @@ if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
 fi
 
 load_from_properties
-detect_deployment_type
-
+set_quarkus_profiles
+set_db_configuration_source_properties
