--- a/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
+++ b/src/packages/src/xroad/common/confclient/etc/xroad/services/confclient.conf
@@ -5,6 +5,8 @@
 
 . /etc/xroad/services/global.conf
 
+export DB_CONFIG_SOURCE_ENABLED=true
+
 XROAD_CONFCLIENT_PARAMS=" -Xmx50m -XX:MaxMetaspaceSize=60m -XX:+ExitOnOutOfMemoryError \
 -Djava.util.logging.manager=org.jboss.logmanager.LogManager \
 -Dquarkus.profile=${XROAD_QUARKUS_PROFILES} ${XROAD_CONFCLIENT_PARAMS}"
