--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 # shared properties for dev/prod runtime
 # test runtime has a separate application.properties
 spring:
+  application:
+    name: proxy-ui-api
   main:
     banner-mode: log
   datasource:
