chore: post merge fixes

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -37,3 +37,9 @@ xroad:
   op-monitor:
     scheme: https # To ensure vault-powered mTLS communication between the proxy and op-monitor daemon
     host: op-monitor
+    # we shorten here messages processing from 1 min to 1 second
+    records-available-timestamp-offset-seconds: 1
+    buffer:
+      socket-timeout-seconds: 1
+    service:
+      socket-timeout-seconds: 1
