--- a/ansible/roles/xroad-ss/tasks/rhel.yml
+++ b/ansible/roles/xroad-ss/tasks/rhel.yml
@@ -24,6 +24,15 @@
         group: "xroad"
         mode: 0751
         force: no
+
+    - name: openbao.hcl template
+      template:
+        src: "openbao.hcl"
+        dest: "/etc/openbao/openbao.hcl"
+        owner: "openbao"
+        group: "openbao"
+        mode: 0600
+        force: no
   when: (database_admin_password is defined) and (database_admin_password != "")
   tags:
     - install-xroad-ss-packages
