chore: fix system-test config

--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -37,3 +37,7 @@ xroad:
   op-monitor:
     scheme: https # To ensure vault-powered mTLS communication between the proxy and op-monitor daemon
     host: op-monitor
+    buffer:
+      socket-timeout-seconds: 1
+    service:
+      socket-timeout-seconds: 1
