--- a/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
+++ b/src/security-server/system-test/src/intTest/resources/compose.systemtest.yaml
@@ -82,6 +82,8 @@ services:
       - xroad.db.op-monitor.hibernate.connection.driver_class=org.postgresql.Driver
       - xroad.db.op-monitor.hibernate.connection.username=opmonitor
       - xroad.db.op-monitor.hibernate.connection.password=secret
+      # we shorten here messages processing from 1 min to 1 second
+      - xroad.op-monitor.records-available-timestamp-offset-seconds=1
     volumes:
       - ../../../src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/op-monitor.yaml:/etc/xroad/conf.d/local.yaml
     healthcheck:
