feat: As a Developer I want to look into automating the merge from develop to develop-8.x so that changes would automatically be included
fix dependabot 403 on push

refs: XRDDEV-2875

--- a/.github/workflows/merge_develop_to_8x.yaml
+++ b/.github/workflows/merge_develop_to_8x.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - develop
+permissions:
+  contents: write
 jobs:
   AutoMergeToDevelop8x:
     name: Auto-merge to develop-8.x
