chore: enable db config source for native proxy-ui
Refs: XRDDEV-2884

--- a/src/packages/src/xroad/common/proxy-ui-api/etc/xroad/services/proxy-ui-api.conf
+++ b/src/packages/src/xroad/common/proxy-ui-api/etc/xroad/services/proxy-ui-api.conf
@@ -5,6 +5,8 @@
 
 . /etc/xroad/services/global.conf
 
+export DB_CONFIG_SOURCE_ENABLED=true
+
 CUSTOM_PROXY_UI_API_PARAMS="$XROAD_PROXY_UI_API_PARAMS"
 JAR="/usr/share/xroad/jlib/proxy-ui-api.jar"
 
