--- a/src/common/common-int-test/src/main/resources/signer-container-files/etc/xroad/conf.d/local.yaml
+++ b/src/common/common-int-test/src/main/resources/signer-container-files/etc/xroad/conf.d/local.yaml
@@ -3,3 +3,10 @@ xroad:
     device-configuration-file: /etc/xroad/signer/devices.ini
     rpc:
       listen-address: "0.0.0.0"
+    addon:
+      hwtoken:
+        session-pool-enabled: true
+        session-pool-max-total: 3
+        session-pool-max-idle: 2
+        session-pool-min-idle: 1
+        session-acquire-timeout: 5S
