chore: enabling db prop source in global.conf
Refs: XRDDEV-2884

--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -101,6 +101,7 @@ set_db_configuration_source_properties() {
       export DB_CONFIG_SOURCE_URL="$jdbc_url"
       export DB_CONFIG_SOURCE_USERNAME=$(get_db_prop 'xroad.db.serverconf.hibernate.connection.username')
       export DB_CONFIG_SOURCE_PASSWORD=$(get_db_prop 'xroad.db.serverconf.hibernate.connection.password')
+      export DB_CONFIG_SOURCE_ENABLED=true
     fi
   fi
 }
