--- a/ansible/roles/init-dev-configuration/files/ss/etc/xroad/services/local.conf
+++ b/ansible/roles/init-dev-configuration/files/ss/etc/xroad/services/local.conf
@@ -6,5 +6,5 @@ SIGNER_JMX_PARAMS="$JMX_COMMON_PARAMS -Dcom.sun.management.jmxremote.port=9991 -
 PROXY_PARAMS="$PROXY_PARAMS -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9999,server=y,suspend=n $PROXY_JMX_PARAMS $PROXY_TELEMETRY_PARAMS"
 XROAD_SIGNER_PARAMS="$XROAD_SIGNER_PARAMS -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9998,server=y,suspend=n $SIGNER_JMX_PARAMS $SIGNER_TELEMETRY_PARAMS"
 XROAD_PROXY_UI_API_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9997,server=y,suspend=n $XROAD_PROXY_UI_API_PARAMS"
-
 XROAD_CONFCLIENT_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9996,server=y,suspend=n $XROAD_CONFCLIENT_PARAMS"
+XROAD_BACKUP_MANAGER_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9995,server=y,suspend=n $XROAD_BACKUP_MANAGER_PARAMS"
