--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -96,10 +96,10 @@ script:
     path: /usr/share/xroad/scripts/generate_certificate.sh
     args: -n internal -f -S -p 2>&1
   generate-backup:
-    path: /usr/share/xroad/scripts/backup_xroad_proxy_configuration.sh
-    valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$"
-  restore-configuration:
-    path: /usr/share/xroad/scripts/restore_xroad_proxy_configuration.sh
+#    path: /usr/share/xroad/scripts/backup_xroad_proxy_configuration.sh
+    valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$" # required for validator, but not used. todo:
+#  restore-configuration:
+#    path: /usr/share/xroad/scripts/restore_xroad_proxy_configuration.sh
 
 common-module-endpoints:
   base-path: /api/v1
