--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -90,8 +90,8 @@ file-upload-endpoints:
       path-pattern: "/**/certificate/import"
 
 script:
-  generate-gpg-keypair:
-    path: /usr/share/xroad/scripts/generate_gpg_keypair.sh
+#  generate-gpg-keypair:
+#    path: /usr/share/xroad/scripts/generate_gpg_keypair.sh
   generate-certificate:
     path: /usr/share/xroad/scripts/generate_certificate.sh
     args: -n internal -f -S -p 2>&1
@@ -104,8 +104,8 @@ script:
 common-module-endpoints:
   base-path: /api/v1
 
-gpgkeys:
-  gpghome: /etc/xroad/gpghome
+#gpgkeys:
+#  gpghome: /etc/xroad/gpghome
 
 #Profile based configuration
 ---
