--- a/src/packages/src/xroad/redhat/SOURCES/proxy/xroad-proxy.service
+++ b/src/packages/src/xroad/redhat/SOURCES/proxy/xroad-proxy.service
@@ -3,7 +3,7 @@ Description=X-Road Proxy
 After=network.target xroad-base.service
 Requires=xroad-base.service
 Wants=postgresql.service
-Wants=xroad-signer.service xroad-confclient.service xroad-proxy-ui-api.service
+Wants=xroad-signer.service xroad-confclient.service xroad-proxy-ui-api.service xroad-backup-manager.service
 
 [Service]
 EnvironmentFile=-/etc/sysconfig/xroad-proxy
