--- a/.github/workflows/merge_develop_to_8x.yaml
+++ b/.github/workflows/merge_develop_to_8x.yaml
@@ -40,8 +40,8 @@ jobs:
           --base develop-8.x \
           --head "$BRANCH_NAME" \
           --title "Merge develop into develop-8.x" \
-          "${{ github.event.pusher.name != 'dependabot[bot]' && format('--assignee "{0}"', github.event.pusher.name) || '' }}" \
-          "${{ github.event.pusher.name == 'dependabot[bot]' && '--reviewer "nordic-institute/xrd-developers"' || '' }}" \
+          ${{ github.event.pusher.name != 'dependabot[bot]' && format('--assignee "{0}"', github.event.pusher.name) || '' }} \
+          ${{ github.event.pusher.name == 'dependabot[bot]' && '--reviewer "nordic-institute/xrd-developers"' || '' }} \
           --body "This PR was created because an attempt to automatically merge develop into develop-8.x resulted in conflicts.
             Please resolve them manually."
         env:
