chore: base image for backup-manager
Refs: XRDDEV-2896

--- a/deployment/security-server/docker/.env
+++ b/deployment/security-server/docker/.env
@@ -2,6 +2,7 @@ CONFIGURATION_CLIENT_IMG=localhost:5555/ss-configuration-client:latest
 PROXY_IMG=localhost:5555/ss-proxy:latest
 PROXY_UI_IMG=localhost:5555/ss-proxy-ui-api:latest
 SIGNER_IMG=localhost:5555/ss-signer:latest
+BACKUP_MANAGER_IMG=localhost:5555/ss-backup-manager:latest
 MONITOR_IMG=localhost:5555/ss-monitor:latest
 OP_MONITOR_IMG=localhost:5555/ss-op-monitor:latest
 
