--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -126,6 +126,8 @@ xroad:
   common:
     global-conf:
       source: REMOTE
+  proxy-ui-api:
+    authentication-provider: DATABASE
 ---
 spring:
   config:
