--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -24,7 +24,6 @@ init:
     username: "opmonitor"
     schema: "public"
 
-
 serviceAccount:
   name: "ss-init-sa"
   create: true
@@ -172,6 +171,7 @@ services:
       XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST: "configuration-client.ss.svc.cluster.local"
       XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST: "signer.ss.svc.cluster.local"
       XROAD_COMMON_RPC_CHANNEL_PROXY_HOST: "proxy.ss.svc.cluster.local"
+      XROAD_COMMON_RPC_CHANNEL_BACKUP_MANAGER_HOST: "backup-manager.ss.svc.cluster.local"
       XROAD_COMMON_RPC_CHANNEL_ENV_MONITOR_HOST: "monitor.ss.svc.cluster.local"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
@@ -290,3 +290,65 @@ services:
       - name: "xroad.db.op-monitor.hibernate.connection.password"
         secretName: "db-opmonitor"
         key: "password"
+  backup-manager:
+    image: localhost:5555/ss-backup-manager:latest
+    imagePullPolicy: Always #todo: change to IfNotPresent
+    resources:
+      requests:
+        memory: 64Mi
+      limits:
+        memory: 512Mi
+    ports:
+      - port: 4099
+        name: http
+      - port: 7665
+        name: grpc
+    readinessProbe:
+      path: "/q/health"
+      scheme: "HTTP"
+    serviceAccount:
+      annotations: { }
+    env:
+      XROAD_HOST: "backup-manager.ss.svc.cluster.local"
+      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
+      XROAD_SECRET_STORE_SCHEME: "http"
+      XROAD_SERVERCONF_DB_HOST: "db-serverconf.ss.svc.cluster.local"
+      XROAD_SERVERCONF_DB_PORT: "5432"
+      XROAD_SERVERCONF_DB_NAME: "serverconf"
+      XROAD_SERVERCONF_DB_SCHEMA: "public"
+      XROAD_SERVERCONF_DB_USERNAME: "serverconf"
+      XROAD_OPENBAO_DB_HOST: "db-openbao.ss.svc.cluster.local"
+      XROAD_OPENBAO_DB_PORT: "5432"
+      XROAD_OPENBAO_DB_DATABASE: "openbao"
+      XROAD_OPENBAO_DB_SCHEMA: "public"
+      XROAD_OPENBAO_DB_USER: "openbao"
+    envFromSecrets:
+      - name: "XROAD_SECRET_STORE_TOKEN"
+        secretName: "xroad-token"
+        key: "XROAD_SECRET_STORE_TOKEN"
+      - name: "XROAD_SERVERCONF_DB_PASSWORD"
+        secretName: "db-serverconf"
+        key: "password"
+      - name: "XROAD_OPENBAO_DB_PASSWORD"
+        secretName: "db-openbao"
+        key: "password"
+    volumeMounts:
+      - mountPath: /var/lib/xroad/backup
+        name: backups-volume
+      - mountPath: /etc/xroad/gpghome
+        name: gpg-key-volume
+    volumes:
+      - name: backups-volume
+        persistentVolumeClaim:
+          claimName: backups-pvc
+      - name: gpg-key-volume
+        persistentVolumeClaim:
+          claimName: gpg-keys-pvc
+
+persistentVolumeClaims:
+  backups-pvc:
+    accessMode: ReadWriteOnce
+    storage: 1Gi
+  gpg-keys-pvc:
+    accessMode: ReadWriteOnce
+    storage: 128Mi
