chore: additional role permissions in k8 chart
Refs: XRDDEV-2896

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -298,6 +298,11 @@ services:
         memory: 64Mi
       limits:
         memory: 512Mi
+    rbac:
+      extraRules:
+        - apiGroups: ["batch"]
+          resources: ["jobs"]
+          verbs: ["create", "get", "list", "watch"]
     ports:
       - port: 4099
         name: http
