chore: using db admin user in backup/restore; k8s job to run liquibase; autobackup script
Refs: XRDDEV-2896

--- a/deployment/security-server/docker/base/Dockerfile-backup-manager-baseline
+++ b/deployment/security-server/docker/base/Dockerfile-backup-manager-baseline
@@ -18,4 +18,4 @@ RUN ARCH=$(dpkg --print-architecture) && \
     rm /tmp/kubectl /tmp/kubectl.sha256
 
 RUN mkdir -p /var/lib/xroad/backup && \
-    chown -R xroad:xroad /var/lib/xroad/backup
+    chown -R xroad:xroad /var/lib/xroad
