--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -334,6 +334,9 @@ services:
       - name: "XROAD_SERVERCONF_DB_PASSWORD"
         secretName: "db-serverconf"
         key: "password"
+      - name: "XROAD_SERVERCONF_DB_ADMIN_PASSWORD"
+        secretName: "db-serverconf"
+        key: "postgres-password"
       - name: "XROAD_OPENBAO_DB_PASSWORD"
         secretName: "db-openbao"
         key: "password"
