chore: restarting services after restoring
Refs: XRDDEV-2896

--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -303,6 +303,9 @@ services:
         - apiGroups: ["batch"]
           resources: ["jobs"]
           verbs: ["create", "get", "list", "watch"]
+        - apiGroups: [ "apps" ]
+          resources: [ "deployments","deployments/scale" ]
+          verbs: [ "get", "list", "update", "watch", "patch" ]
     ports:
       - port: 4099
         name: http
