chore: backup manager in docker
Refs: XRDDEV-2896

--- a/Docker/securityserver/files/etc/xroad/services/local.conf
+++ b/Docker/securityserver/files/etc/xroad/services/local.conf
@@ -8,3 +8,4 @@ XROAD_SIGNER_PARAMS="$XROAD_SIGNER_PARAMS -Xdebug -agentlib:jdwp=transport=dt_so
 XROAD_PROXY_UI_API_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9997,server=y,suspend=n $XROAD_PROXY_UI_API_PARAMS"
 
 XROAD_CONFCLIENT_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9996,server=y,suspend=n $XROAD_CONFCLIENT_PARAMS"
+XROAD_BACKUP_MANAGER_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9995,server=y,suspend=n $XROAD_BACKUP_MANAGER_PARAMS"
